--- a/frog_server/pubspec.yaml
+++ b/frog_server/pubspec.yaml
@@ -4,10 +4,11 @@ version: 1.0.0+1
 publish_to: none
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
+  sdk: ">=2.18.5 <3.0.0"
 
 dependencies:
-  dart_frog: ^0.1.0
+  dart_frog: ^0.3.0
+  dart_frog_web_socket: ^0.1.0-dev.2
 
 dev_dependencies:
   mocktail: ^0.3.0
